# adventus

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
src/adventofcode/year2015/: day01.py  day06.py
src/adventofcode/year2016/: day03.py  day07.py
src/adventofcode/year2018/: day02.py
src/adventofcode/year2024/: day21.py  day25.py
src/adventofcode/year2025/: day03.py
src/adventus/: __init__.py  cache.py  cli.py  commands.py  http.py  main.py  puzzle.py  settings.py  template.txt
src/adventus/cli/: __init__.py  main.py
src/adventus/lib/: __init__.py  cache.py  commands.py  http.py  settings.py
