[project]
name = "adventus"
version = "0.0.2"
description = "CLI puzzle input downloader and time saving tools for Advent of Code."
authors = [{name = "Pete Dibdin"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.0.0",
    "markdownify>=1.2.0"
]

[project.urls]
Homepage = "https://github.com/pjd199/adventus"
Repository = "https://github.com/pjd199/adventus"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
adventus = "adventus.main:main"

[tools.adventus]
cache-puzzle = true
cache-answers = true
cache-input = true